package org.example;

public interface ExpirationChecker {
    boolean isExpired();
}
