package org.example;

public enum MilkType {
    LONG_LASTING,
    REGULAR
}
