package org.example;

public enum ProductType {
    SHOVEL,
    TRUCK,
    MILK
}
