package org.example;

public enum ShovelDimension {
    SMALL,
    NORMAL,
    BIG
}
