package org.example;

public enum ShovelMaterial {
    ALLUMINIUM,
    STEEL,
    PLASTIC
}
